--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <title>Leifs BucheMitMir</title>
+  <meta name="google-site-verification" content="v8TDOSEkRXUcaOl4gQmxCzlEVXZsqusr4W-JIgVfhpA"/>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA63bzHGtzLBpwM6s5C4hwIjUkDef70e5M"
+          type="text/javascript"></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
